# blr-traffic-monitor

./: .gitignore  README.md  csv-bangalore_traffic.csv  csv-bangalore_traffic_processed.csv  csv-bangalore_traffic_raw.csv  csv-locations_12.9514242_77.6590212.csv  csv-routes.csv  pyproject.toml  requirements.txt  routes.html  traffic_snapshot.ipynb  traffic_snapshot.py  traffic_visual.ipynb
.github/workflows/: traffic_snapshot.yml
