[project]
name = "blr-traffic-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "openlocationcode>=1.0.1",
    "pandas>=2.3.1",
    "pykernel>=0.1.6",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "timezonefinder>=8.1.0",
    "tqdm>=4.67.1",
]
